--- a/introjs/index.html
+++ b/introjs/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
   <h1>OMG, JavaScript it be!</h1>
-  <p>JavaScript is so cool guys. I told my Mom all about it and she was just <em>so</em> thrilled.
+  <p>JavaScript iss so cool guys. I told my Mom all about it and she was just <em>so</em> thrilled.
   </body>
 </html>
